cmake_minimum_required( VERSION 2.8 )
project( hulk_fix )

include_directories( include )
include_directories( $ENV{HULK_INSTALL_DIR}/hulk_core/include )
link_directories( $ENV{HULK_INSTALL_DIR}/hulk_core/lib )
add_subdirectory( src )
add_subdirectory( test )
add_subdirectory( benchmark )

install( FILES include/hulk/fix/acceptor.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/decoder.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/message.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/session.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/session_factory.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/tcp.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/transport.h DESTINATION include/hulk/fix )
install( FILES include/hulk/fix/transport_callback.h DESTINATION include/hulk/fix )

enable_testing()
add_test( test_decoder test/test_decoder )
add_test( test_session test/test_session )
add_test( test_tcp_acceptor test/test_tcp_acceptor )
add_test( test_tcp_drop_copy test/test_tcp_drop_copy )
